DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 2.3.0