@@ -1,4 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Apr-26-2007 patrick     Improved OSG scene view lighting for subclasses of
+                        vrj::OsgApp. Submitted by Doug McCorkle.
 Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                         NEW VERSION: 2.3.0
